Add JWT middleware, update openapi docs
