# api/route/route.go
@@ -8,13 +8,13 @@ import (
 	"github.com/massivebugs/home-feature-server/api/handler"
 )
 
-func RegisterRoutes(e *echo.Echo, cfg *config.Config, db *sql.DB) {
+func RegisterRoutes(e *echo.Echo, cfg *config.Config, jwtMiddleware echo.MiddlewareFunc, db *sql.DB) {
 	api := e.Group("/api")
 	h := handler.NewAPIHandlers(cfg, db)
-	registerV1Routes(api, cfg, h)
+	registerV1Routes(api, cfg, jwtMiddleware, h)
 }
 
-func registerV1Routes(e *echo.Group, cfg *config.Config, h *handler.Handlers) {
+func registerV1Routes(e *echo.Group, cfg *config.Config, jwtMiddleware echo.MiddlewareFunc, h *handler.Handlers) {
 	v1 := e.Group("/v1")
 
 	// Ping
@@ -26,4 +26,10 @@ func registerV1Routes(e *echo.Group, cfg *config.Config, h *handler.Handlers) {
 	// Auth
 	v1.POST("/auth", handler.CreateEchoHandlerFunc(cfg, h.AuthHandler.CreateUser))
 	v1.POST("/auth/token", handler.CreateEchoHandlerFunc(cfg, h.AuthHandler.CreateJWTToken))
+
+	// Authenticated routes
+	v1Secure := v1.Group("/secure")
+	v1Secure.Use(jwtMiddleware)
+
+	v1Secure.POST("/auth", handler.CreateEchoHandlerFunc(cfg, h.AuthHandler.GetAuthUser))
 }
