# doc/openapi/auth.yaml
@@ -11,6 +11,10 @@ servers:
       default: localhost
     port:
       default: '1323'
+components:
+  securitySchemes:
+    bearerAuth:
+      $ref: './api.yaml#/components/securitySchemes/bearerAuth'
 paths:
   /api/v1/auth:
     post:
@@ -74,6 +78,28 @@ paths:
               required:
                 - username
                 - password
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    $ref: './api.yaml#/components/schemas/error'
+                  data:
+                    type: string
+                    example: ""
+  /api/v1/secure/auth:
+    post:
+      tags: 
+        - v1
+      operationId: secure/auth
+      description: Returns the authenticated user info
+      summary: Returns the authenticated user info
+      security:
+        - bearerAuth: []
       responses:
         200:
           description: OK
